# show-excluded-and-ignored

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  create-samples.py  ghost_files_finder.spec  noxfile.py  pyproject.toml
scripts/: copy_feather_icons.sh
src/rfe/: __init__.py  app.py  cli.py  main_window.py
src/rfe/models/: fs_model.py  match_engine.py  rules_model.py
src/rfe/services/: config.py  formatting.py  logger.py  sounds.py  trash.py
src/rfe/views/: about_dialog.py  rules_panel.py  scan_progress_dialog.py  search_bar.py  status_bar.py  tree_panel.py
src/rfe/workers/: __init__.py  delete_worker.py  scan_worker.py
tests/integration/: test_scanner_finds_excluded_patterns.py
tests/unit/: test_match_engine.py
