[project]
name = "show-excluded-and-ignored"
version = "0.1.0"
description = "Desktop app to visualize files matched by rclone filter rules."
authors = [{ name = "Rich Lewis", email = "rich@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6==6.7.3",
  "send2trash>=1.8",
  "platformdirs>=4.3",
  "rapidfuzz>=3.9",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pyright>=1.1",
  "pre-commit>=3.7",
  "nox>=2024.4",
]

[project.scripts]
show-excluded-and-ignored = "rfe.app:main"
sei-cli = "rfe.cli:main"

[tool.uv]
package = true
required-environments = ["platform_system == 'Darwin' and platform_machine == 'x86_64'"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "UP",
  "I",
  "S",
  "BLE",
  "C4",
  "TID",
  "RUF",
]
ignore = [
  "S101",
]
unfixable = []
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
